[package]
name = "yourei"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
